fixspacing.docx
change margins and padding to allow flex box space to grow and shrink

--- a/travelogue.css
+++ b/travelogue.css
@@ -26,17 +26,21 @@ h2 {
     background-color: rgb(97, 217, 207);
     margin-inline: 42px;
     border-radius: 10px;
+
 }
 
 h3 {
+    font-size: x-large;
     color:aliceblue;
     padding: 20px;
     width: 400px;
     background-color: rgb(174, 161, 215);
     border-radius: 10px;
+    
 }
 
 h4{
+    font-size: x-large;
     color:aliceblue;
     padding: 20px;
     width: 400px;
@@ -52,8 +56,8 @@ body {
 }
 
 .container {
-    display: flex;
-   justify-content: space-between;
+display: flex;
+justify-content: space-between;
    
    
    
@@ -61,15 +65,19 @@ body {
 }
 
 .left-col {
-    width: 30%;
+    width: 100%;
     text-align: left;
     margin-left: 40px;
+    margin-right:5px ;
+   
     
 }
 
 .right-col {
 
-    align-self:flex-start;
-    font-size: xx-large;
+    min-width: 0;
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+    color: aliceblue;
 
 }
